k8s/service-deployment-http-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: gke-portal-vue-service-http
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: gke-portal-vue
