k8s/all-deployment.yml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gke-portal-vue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gke-portal-vue
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: gke-portal-vue
    spec:
      containers:
      - name: portal-vue
        image: gcr.io/firm-streamer-339509/portal-vue:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m

---
apiVersion: v1
kind: Service
metadata:
  name: gke-portal-vue-service
spec:
  selector:
    app: gke-portal-vue
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-portal-vue-service-ingress
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: "nueip-com"
#  namespace: portal-vue
spec:
  rules:
  - host: portal.nueip.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: gke-portal-vue-service
            port: 
              number: 80
